--- a/www/index.html
+++ b/www/index.html
@@ -31,14 +31,10 @@
     </head>
     <body onload="loadJS()">
         <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
             <header>Example Camera Application</header>
-                <section>Use of Phonegap Camera</section>
-                <section><input type="button" value="Load Camera" onclick="takePhoto()"></section>
+            <section>Use of Phonegap Camera</section>
+            <section><input type="button" value="Load Camera" onclick="takePhoto()"></section>
+            <div id="imageContainer"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -61,7 +57,8 @@
         }
 
         function onCameraSuccess(imageURL){
-            navigator.notification.alert("onCameraSuccess: " + imageURL);
+            ic = document.getElementById('imageContainer');
+            ic.innerHTML = '<img src"' + imageURL + '" width="50%"/>';
         }
 
         function onCameraError(e){
