--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 
         function onCameraSuccess(imageURL){
             ic = document.getElementById('imageContainer');
-            ic.innerHTML = '<img src="' + imageURL + '" width="50%" style="border-radius="20%;" "/>';
+            ic.innerHTML = '<img src="' + imageURL + '" width="50%"/>';
         }
 
         function onCameraError(e){
