--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
         <title>Camera Application</title>
+        <style>
+        #imageContainer{
+            border-radius: 50%;
+        }
+        </style>
     </head>
     <body onload="loadJS()">
         <div class="app">
