Add custom notification

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
         }
 
         function takePhoto(){
+            navigator.notification.alert("Test", null, "Alert Title", "OK");
             navigator.camera.getPicture(onCameraSuccess,onCameraError);
         }
 
