--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,7 @@
     </head>
     <body onload="loadJS()">
         <div class="app">
-            <div id="imageContainer"></div>
-            
-            <header>Example Camera Application</header>
-            <section>Use of Phonegap Camera</section>
+            <div id="imageContainer">x</div>
             
             <input type="button" value="Load Camera" onclick="takePhoto()">
         </div>
