--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
                 
                 var cameraOptions = {
                     quality:50,
-                    sourceType : Camera.PictureSourceType.PHOTOLIBRARY,
+                    sourceType : Camera.PictureSourceType.SAVEDPHOTOALBUM,
                     destinationType:Camera.DestinationType.FILE_URI,
                     allowEdit: true,
                     encodingType: Camera.EncodingType.JPEG,
